--- a/index.html
+++ b/index.html
@@ -90,16 +90,59 @@
         data-prev-percentage="0"
       >
         <div class="slider-item">
-          <h1 class="video-heading">Super Mario™ 3D World + Bowser’s Fury</h1>
+          <h1 class="slider-heading">Luigi's Mansion™ 2 HD</h1>
+          <img
+            src="./Assets/luigis-logo.avif"
+            alt="luiggi's logo"
+            class="l-logo"
+            draggable="false"
+          />
         </div>
         <div class="slider-item">
-          <h1 class="video-heading">Luigi's Mansion™ 2 HD</h1>
+          <h1 class="slider-heading">Nintendo Switch systems</h1>
+          <img
+            src="./Assets/system-controller.avif"
+            alt="controller"
+            class="banner-controller"
+            draggable="false"
+          />
+          <img src="Assets/shadow.avif" alt="shadow" class="shadow" />
         </div>
         <div class="slider-item">
-          <h1 class="video-heading">Super Mario™ 3D World + Bowser’s Fury</h1>
+          <h1 class="slider-heading">Paper Mario™: The Thousand-Year Door</h1>
+          <img
+            src="./Assets/papermario-logo.avif"
+            alt="mario-logo"
+            class="pm-logo"
+            draggable="false"
+          />
         </div>
         <div class="slider-item">
-          <h1 class="video-heading">Luigi's Mansion™ 2 HD</h1>
+          <h1 class="slider-heading">Metroid™</h1>
+          <img
+            src="/Assets/md-logo.png"
+            alt="md-logo"
+            class="md-logo"
+            draggable="false"
+          />
+          <img
+            src="/Assets/mpr-logo.png"
+            alt="mpr-logo"
+            class="mpr-logo"
+            draggable="false"
+          />
+          <img
+            src="/Assets/md.png"
+            alt="md-char"
+            class="md-char"
+            draggable="false"
+          />
+          <img
+            src="/Assets/mpr.png"
+            alt="mpr-char"
+            class="mpr-char"
+            draggable="false"
+          />
         </div>
       </div>
       <div class="cursor">
@@ -115,9 +158,12 @@
       <h1 class="featHeading">Featured</h1>
       <fieldset>
         <label style="--img: url(./Assets/papermario.jpg)">
-          <div class="box">
+          <div class="box box1">
             <div class="gameName">
               <p class="gname">Paper Mario: The Thousand-Year Door</p>
+              <div class="down-arrow">
+                <i class="fa-solid fa-arrow-down"></i>
+              </div>
             </div>
             <div class="statusCo">
               <p class="status">Available now</p>
@@ -394,5 +440,6 @@
         loader.style.display = "none";
       }
     </script>
+    <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
   </body>
 </html>
